# test_Tatneft

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
metrics/metric/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
metrics/metric/migrations/: 0001_initial.py
metrics/metrics/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
metrics/reports/: fake_report.txt
nginx/: default.conf
